# ffmpeg-editlist

./: .gitignore  LICENSE  README.md  ffmpeg-editlist.py  ffmpeg_editlist.py  pyproject.toml  test_ffmpeg_editlist.py
.github/workflows/: release.yml  test.yml
sample/: count10.mkv  count10.srt  video-10s.mkv
zoom_preprocessing/: README.md  s1_split_videos.sh  s2_get_crop_coordinates.sh  s3_trim_crop_merge.sh
